# open62541

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  copyDbg.sh  launch.vs.json  tasks.vs.json
arch/: network_ws.c  ua_architecture_definitions.h
arch/wec7/: ua_architecture.h
arch/win32/: ua_architecture.h
doc/: installing.rst
examples/: CMakeLists.txt  client.c  client_subscription_loop.c  pushbuttons.c  server_import.c  server_mainloop.c  statemachine.c  statemachine.h  tutorial_server_events.c  tutorial_server_method.c  tutorial_server_variable.c
examples/access_control/: client_access_control.c  server_access_control.c
examples/custom_datatype/: server_types_custom.c
examples/import/: CMakeLists.txt  import.c  server_import.c  system.txt  testnodeset.xml
examples/nodeset/: CMakeLists.txt  My.Types.bsd  Test.Types.bsd  demo  mynamespace.c  mynamespace.h  mynodeset.csv  mynodeset.xml  mytypes_generated.c  mytypes_generated.h  mytypes_generated_encoding_binary.h  mytypes_generated_handling.h  server_em79.c  server_mynodeset.c  server_testnodeset.c  testnodeset.csv  testnodeset.xml
include/: ua_constants.h  ua_plugin_pubsub.h  ua_server.h  ua_types.h
plugins/: ua_config_default.c
src/: ua_securechannel.c  ua_types_encoding_binary.c  ua_types_encoding_json.c  ua_types_encoding_json.h  ua_util.c
tests/: CMakeLists.txt  check_types_builtin.c  check_utils.c
tests/nodeset-import/: CMakeLists.txt  check_import_datatypes.c  check_nodeset_import.c
tests/nodeset-import/testNodesets/: basicNodeClassTest.xml
tools/: generate_datatypes.py
(+54 files in other folders)
